<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivBuyerCreateImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBuyerPostCreateTitleStatic"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvBuyerPostCreateTitleStatic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/create_new_buyer_post"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etBuyerPostCreateTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/buyer_update_post_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBuyerCreateImage" />

    <EditText
        android:id="@+id/etBuyerPostCreateQty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/buyer_update_post_quantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBuyerPostCreateTitle" />

    <EditText
        android:id="@+id/etBuyerPostCreatePrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/buyer_update_post_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBuyerPostCreateQty" />

    <EditText
        android:id="@+id/etBuyerPostCreateLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/buyer_pwn_update_post_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBuyerPostCreatePrice" />

    <EditText
        android:id="@+id/etBuyerPostCreateReqDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:inputType="datetime"
        android:text="@string/buyer_update_post_reqDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBuyerPostCreateLocation" />

    <EditText
        android:id="@+id/etBuyerPostCreateType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/buyer_update_post_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBuyerPostCreateName" />

    <EditText
        android:id="@+id/etBuyerPostCreateName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/buyer_update_post_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBuyerPostCreateReqDate" />

    <Button
        android:id="@+id/btnBuyerPostCreateImageUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/buyer_update_post_static_addBtn"
        app:icon="@drawable/baseline_camera_alt_24"
        app:layout_constraintBottom_toBottomOf="@+id/ivBuyerCreateImage"
        app:layout_constraintStart_toEndOf="@+id/ivBuyerCreateImage"
        app:layout_constraintTop_toTopOf="@+id/ivBuyerCreateImage" />

    <Button
        android:id="@+id/btnBuyerPostCreateSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/buyer_update_post_static_saveBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBuyerPostCreateType" />
</androidx.constraintlayout.widget.ConstraintLayout>