<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_post_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/app_gradient_color_background">

        <TextView
            android:id="@+id/up_title"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="@dimen/toolbar_title_padding_start"
            android:paddingLeft="@dimen/toolbar_title_padding_start"
            android:paddingEnd="0dp"
            android:layout_marginRight="38dp"
            android:paddingRight="0dp"
            android:text="Update Post"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_title_text_size"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:id="@+id/fl_user_image"
        android:layout_width="@dimen/profile_user_image_size"
        android:layout_height="@dimen/profile_user_image_size"
        android:layout_marginTop="@dimen/profile_user_image_marginTop"
        android:layout_marginLeft="80dp"
        android:layout_marginBottom="25dp">

        <ImageView
            android:id="@+id/iv_tool_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/profile_user_photo_margin"
            android:background="@color/colorLightGrey"
            android:src="@drawable/tool_placeholder"
            android:contentDescription="@string/content_description"
            android:scaleType="fitXY"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/tool_placeholder" />

    </FrameLayout>


    <EditText
        android:id="@+id/etToolTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:hint="Post title"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etToolPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="Unit price" />

    <EditText
        android:id="@+id/etToolLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="Location"
        android:inputType="textPersonName" />



    <RadioGroup
        android:id="@+id/etToolType"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_radio_button_height"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
       >

        <com.example.agroceylon.utils.ACRadioButton
            android:id="@+id/rbAgTool"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/gender_tab_selector"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/rb_agTool_text"
            android:textColor="@drawable/gender_tab_text_color_selector"
            android:textStyle="bold" />

        <com.example.agroceylon.utils.ACRadioButton
            android:id="@+id/rbFertilizer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"
            android:background="@drawable/gender_tab_selector"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/rb_fertilizer_text"
            android:textColor="@drawable/gender_tab_text_color_selector"
            android:textStyle="bold"
            android:layout_marginStart="4dp" />

    </RadioGroup>

    <Button
        android:id="@+id/btnUpdateData"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/btScotch"
        android:text="Update Data" />


</LinearLayout>
